# comb_spec_searcher

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE.txt  MANIFEST.in  README.md  README.rst  comb_spec_searcher_rs.pyi  conftest.py  depth_first_of_separables.txt  devtest.py  example.py  fastest_separable.txt  get_gen_func_from_json.py  hit_list.txt  hitlist.md  how_to_use_example_file.py  hunt.py  listimpl.py  mypy.ini  output.txt  output1.txt  output3.txt  pylintrc  pyproject.toml  random_bases.txt  requirements.txt  run_batch.py  sandbox.py  separable_tree.txt  setup.cfg  setup.py  setup_tilescope_test.sh  spectrum_test.py  templates.py  (+7 more)
.github/workflows/: build-and-deploy.yml  main.yml  test.yml
atrap/: Helpers.py  LRUCache.py  MetaTree.py  MetaTreeRefactor.py  ProofTree.py  StrategyPacks.py  __init__.py  bakery_naive.py  meta_tree_naive.py  patisserie.py  proof_strategies.py  recipes.py  recursion.py  row_and_column_insertions.py  tools.py  verification.py
atrap/recipes/: __init__.py  cell_insertion.py  row_and_column_insertion.py  row_column_separation.py  tools.py
atrap/strategies/: __init__.py  cell_insertion.py  point_placement.py  reversibly_deletable.py  row_col_placement.py  row_column_separation.py
atrapv2/: LRUCache.py  ProofTree.py  StrategyPacks.py  __init__.py  devtest.py  equivdb.py  example.py  ruledb.py  slurm-24916_0.out  slurm-24916_9.out  tilescope.py  tilingdb.py  tilingmanager.py  tilingqueue.py  tilingqueuedf.py  tree_searcher.py  visQex.py  visual_queue.py
atrapv2/strategies/: __init__.py  strategy_class.py
batch_runner/: length6  run_batch.py
clutter/: hit_list.txt  test_cell_insertion.py  test_patisserie.py
clutter/atrap/: ProofTree.py  __init__.py  patisserie.py  recursion.py
comb_spec_searcher/: LRUCache.py  ProofTree.py  __init__.py  bijection.py  class_db.py  class_queue.py  comb_spec_searcher.py  combinatorial_class.py  constructor.py  equiv_db.py  equivdb.py  exception.py  isomorphism.py  limited_strategy_db.py  objectdb.py  objectdb_compress.py  objectqueue.py  objectqueuedf.py  proof_tree.py  queue.py  rule.py  rule_and_flip.py  rule_db.py  ruledb.py  specification.py  specification_drawer.py  specification_extrator.py  tree_searcher.py  typing.py  utils.py  visual_queue.py
comb_spec_searcher/class_queue/: __init__.py  base.py  entropy_queue.py
comb_spec_searcher/combinatorial_object/: __init__.py  combinatorial_object.py
comb_spec_searcher/rule_db/: __init__.py  abstract.py  base.py  forest.py  forget.py  limited_strategy.py
comb_spec_searcher/strategies/: __init__.py  abstract_strategy.py  constructor.py  old_rule.py  rule.py  strategy.py  strategy_class.py  strategy_pack.py
comparing_v1_and_v2/v1/: hunt.py  spectrum_test.py
comparing_v1_and_v2/v2/: hunt.py  spectrum_test.py
examples/: 01  012_021  012_021_102  012_021_102_120  012_021_102_120_201  012_021_102_120_201_210  012_021_102_120_210  012_021_102_210  012_021_120  012_021_120_201  012_021_120_210  012_021_210  012_120  012_120_201  012_210  01_10  01_210  021  021_102  021_102_120  021_102_120_201  021_120  all_S3_subclasses_not_123.py
examples/Kuszmaul/: 1324_1342_1432_2143_3142  ex1.py  ex2.py
examples/all_1xs3_1xs4/: 012_0321  012_1032  012_1302  012_1320  021_0123  021_1023  021_2013  021_2103  021_2301  021_3012  021_3102  021_3120  021_3201  021_3210  210_0123  210_0213  210_0231  210_1023  210_1032  210_1230  210_2031  210_2301  all_1xs3_1xs4.py
examples/all_leq_S4/: 01  012  012_021  012_021_102  012_021_102_120  012_021_102_120_201  012_021_102_120_201_210  012_021_102_120_201_3210  012_021_102_120_210  012_021_102_120_3201  012_021_102_120_3201_3210  012_021_102_120_3210  012_021_102_210  012_021_102_210_2301  012_021_102_2301  012_021_102_2301_2310  012_021_102_2301_2310_3120  012_021_102_2301_2310_3120_3201  012_021_102_2301_2310_3120_3201_3210  012_021_102_2301_2310_3120_3210  012_021_102_2301_2310_3201  012_021_102_2301_2310_3201_3210  012_021_102_2301_2310_3210  (+14185 more)
ideas/: recursion.tex
non-regular-insertion-encodable-bases/: find_non_regular_insertion_encodable_bases.py  length2  length3_failed  length3_succeeded  length6_failed  length6_succeeded  run.py  status  strategy_packs.txt  test  using_pre_computed_non_polynomial_classes.py
results/: hunt_123_results.txt  hunt_2134_results.txt
spectrum_results/: spectrum_123_results_tree_number_1.txt  spectrum_123_results_tree_number_2.txt  spectrum_123_results_tree_number_3.txt  spectrum_123_results_tree_number_4.txt  spectrum_123_results_tree_number_5.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_1.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_2.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_3.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_4.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_5.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_6.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_7.txt  spectrum_1243_1324_1342_2413_2431_3142_3412_4132_results_tree_number_8.txt  stratsused.txt  summary_123_100_repetitions.txt  summary_123_10_repetitions.txt  summary_123_20_repititions.txt  summary_1243_1324_1342_2413_2431_3142_3412_4132_100_repetitions.txt
src/: forest.rs  lib.rs
tests/: forest.py  test_bijections.py  test_forest.py  test_pickle.py  test_proof_tree.py  test_rule.py  test_run_debug.py  test_rust.py  test_searcher.py  test_specification.py  test_strategies.py  test_strategy.py  test_strategy_pack.py  test_tools.py  test_utils.py
tilescopetwo/: 012.txt  0123_0132_1023_1032.txt  012_3210.txt  021.txt  1032_1302_2031_2301.txt  ProofTree.py  __init__.py  atrapstrategypack.py  playground.py  strategy_packs.py  tilescope.py  tilingdb.py  visQex.py
toufik/: length3.md
tree_search/: Node.java  TreeStrategy.java
tree_search_haskell/: proof-trees.hs  whiteboard-example.txt
tree_search_python/: tilescope.py
(+55228 files in other folders)
