[project]
name = "comb_spec_searcher"
authors = [
    {name = "Permuta Triangle", email = "permutatriangle@gmail.com"},
]
description = "A library for performing combinatorial exploration."
readme = "README.rst"
requires-python = ">=3.8"
keywords = [
    "enumerative",
    "combinatorics",
    "combinatorial",
    "specification",
    "counting",
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "logzero==1.7.0",
    "sympy==1.10.1",
    "psutil==5.9.4",
    "pympler==1.0.1",
    "requests==2.28.1",
    "typing-extensions==4.4.0",
    "tabulate==0.9.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/PermutaTriangle/comb_spec_searcher"
source = "https://github.com/PermutaTriangle/comb_spec_searcher"
tracker = "https://github.com/PermutaTriangle/comb_spec_searcher/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
comb_spec_searcher = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.dynamic]
version = {attr = "comb_spec_searcher.__version__"}




[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
