[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comb_spec_searcher"
dynamic = ["version"]
authors = [
    {name = "Permuta Triangle", email = "permutatriangle@gmail.com"},
]
description = "A library for performing combinatorial exploration."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
keywords = ["enumerative", "combinatorics", "combinatorial", "specification", "counting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "logzero==1.7.0",
    "sympy==1.14.0",
    "psutil==7.0.0",
    "pympler==1.1",
    "requests==2.32.4",
    "typing-extensions==4.14.0",
    "tabulate==0.9.0",
]

[project.urls]
Source = "https://github.com/PermutaTriangle/comb_spec_searcher"
Tracker = "https://github.com/PermutaTriangle/comb_spec_searcher/issues"

[tool.hatch.version]
path = "comb_spec_searcher/__init__.py"

[tool.hatchling.build.targets.wheel]
packages = ["comb_spec_searcher"]

[tool.hatchling.build.targets.sdist]
include = [
    "comb_spec_searcher",
    "tests", 
    "README.rst",
    "LICENSE.txt",
    "CHANGELOG.md",
    "CITATION.cff",
    "example.py",
    "test_readme.txt",
    "setup_tilescope_test.sh",
]

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''